[gd_scene load_steps=14 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Instruction.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/background.png" type="Texture" id=3]
[ext_resource path="res://Continuum.tscn" type="PackedScene" id=4]
[ext_resource path="res://Teddy.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/sounds/continuum-theme-song.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/win.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/lose.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/hit.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Instruction = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -2.0
margin_right = 1041.0
margin_bottom = 604.0
texture = ExtResource( 3 )
expand = true

[node name="Continuum" parent="." instance=ExtResource( 4 )]
position = Vector2( 420, 300 )

[node name="Teddy" parent="." instance=ExtResource( 5 )]
position = Vector2( 420, 300 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="GetReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GetReadyLabel" type="Label" parent="."]
visible = false
margin_left = 352.0
margin_top = 460.0
margin_right = 488.0
margin_bottom = 496.0
custom_fonts/font = SubResource( 1 )
text = "Get Ready"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
visible = false
margin_left = 176.0
margin_top = 430.0
margin_right = 662.0
margin_bottom = 561.0
custom_fonts/font = SubResource( 2 )
text = "Game Over!"
align = 1
valign = 1

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -4.0
autoplay = true

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="start_game" from="HUD" to="Continuum" method="_on_HUD_start_game"]
[connection signal="timeout" from="GetReadyTimer" to="." method="_on_GetReadyTimer_timeout"]
